--- a/01-CSS基础-介绍及语法.html
+++ b/01-CSS基础-介绍及语法.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="styles/base.css" />
+    <link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="styles/01.css" />
   </head>
   <body>
